# commonlibrary_c_utils

./: AGENTS.md  bundle.json
base/: BUILD.gn  utils.versionscript
base/include/: directory_ex.h  directory_ex_inner.h  safe_map.h  singleton.h  timer.h
base/src/: directory_ex.cpp  event_demultiplexer.cpp  event_reactor.h  file_ex.cpp  io_event_epoll.cpp  io_event_reactor.cpp  mapped_file.cpp  parcel.cpp  string_ex.cpp  timer.cpp  timer_event_handler.cpp  unicode_ex.cpp
base/src/rust/: directory_ex.rs
base/test/benchmarktest/: BUILD.gn
base/test/benchmarktest/ashemem_benchmark_test/: BUILD.gn
base/test/benchmarktest/datatime_benchmark_test/: BUILD.gn
base/test/benchmarktest/directory_benchmark_test/: BUILD.gn  directory_benchmark_test.cpp
base/test/benchmarktest/event_benchmark_test/: BUILD.gn
base/test/benchmarktest/file_benchmark_test/: BUILD.gn
base/test/benchmarktest/mapped_benchmark_test/: BUILD.gn
base/test/benchmarktest/observer_benchmark_test/: BUILD.gn
base/test/benchmarktest/parcel_benchmark_test/: BUILD.gn
base/test/benchmarktest/refbase_benchmark_test/: BUILD.gn
base/test/benchmarktest/rwlock_benchmark_test/: BUILD.gn
base/test/benchmarktest/safe_block_queue_benchmark_test/: BUILD.gn
base/test/benchmarktest/safe_block_queue_tracking_benchmark_test/: BUILD.gn
base/test/benchmarktest/safe_map_benchmark_test/: BUILD.gn
base/test/benchmarktest/safe_queue_benchmark_test/: BUILD.gn
base/test/benchmarktest/singleton_benchmark_test/: BUILD.gn
base/test/benchmarktest/sorted_vector_benchmark_test/: BUILD.gn
base/test/benchmarktest/string_benchmark_test/: BUILD.gn
base/test/benchmarktest/thread_benchmark_test/: BUILD.gn
base/test/benchmarktest/thread_pool_benchmark_test/: BUILD.gn
base/test/benchmarktest/timer_benchmark_test/: BUILD.gn
base/test/benchmarktest/unique_fd_benchmark_test/: BUILD.gn
base/test/fuzztest/: BUILD.gn
base/test/fuzztest/ashmem_fuzzer/: BUILD.gn
base/test/fuzztest/directory_fuzzer/: BUILD.gn
base/test/fuzztest/parcel_fuzzer/: BUILD.gn
base/test/fuzztest/refbase_fuzzer/: BUILD.gn
base/test/fuzztest/string_fuzzer/: BUILD.gn
base/test/fuzztest/thread_fuzzer/: BUILD.gn
base/test/fuzztest/timer_fuzzer/: BUILD.gn
base/test/unittest/common/: BUILD.gn  utils_directory_test.cpp  utils_event_test.cpp  utils_thread_test.cpp
base/test/unittest/rust/: rust_utils_directory_test.rs
docs/knowledge/: data_containers.md  event_handling.md  file_io.md  memory.md  serialization.md  threading.md
docs/zh-cn/: c-utils-guide-directory.md  c_utils_guide_rust_directory.md
